# Rust-Roster

./: .gitignore  README.md  build.sh  docker-compose.yml
src/backend/: Cargo.toml  Dockerfile  start.sh  toolchain.toml
src/backend/src/: home.rs  main.rs  student.rs
src/backend/templates/: footer.html.hbs  header.html.hbs  index.html.hbs  template_1.html.hbs
src/frontend/: Dockerfile  setup.sh
src/frontend/react-app/: package.json  webpack.config.js
src/frontend/react-app/src/: index.js
src/mondogb/: Dockerfile
