[package]
name = "rust-roster-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
serde = {version = "1.0.117", features = ["derive"]}
mongodb = "2.0.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]